fix volume cutoff, white icons, rename a file

--- a/ui/qml.qrc
+++ b/ui/qml.qrc
@@ -16,10 +16,6 @@
         <file>main_mobile.qml</file>
         <file>SoundSampleGenerators.qml</file>
         <file>SoundBoard.qml</file>
-        <file>EnvelopEffect.qml</file>
-        <file>FilterEffect.qml</file>
-        <file>FrequencyEffect.qml</file>
-        <file>OthersEffect.qml</file>
         <file>SoundEffectGroup.qml</file>
         <file>CollapseButton.qml</file>
         <file>qtquickcontrols2.conf</file>
@@ -38,5 +34,7 @@
         <file>ubuntu_touch/UTFileExportHandler.qml</file>
         <file>ubuntu_touch/UTFileExport.qml</file>
         <file>ExportHandler.qml</file>
+        <file>ToolButton.qml</file>
+        <file>ubuntu_touch/ExportDialog.qml</file>
     </qresource>
 </RCC>
