--- a/ui/qml.qrc
+++ b/ui/qml.qrc
@@ -33,7 +33,7 @@
         <file>assets/back.svg</file>
         <file>ubuntu_touch/UTFileExportHandler.qml</file>
         <file>ubuntu_touch/UTFileExport.qml</file>
-        <file>ExportHandler.qml</file>
+        <file>DefaultExportHandler.qml</file>
         <file>ToolButton.qml</file>
         <file>ubuntu_touch/ExportDialog.qml</file>
         <file>SoundItem.qml</file>
@@ -43,5 +43,6 @@
         <file>assets/add-to-playlist.svg</file>
         <file>assets/undo.svg</file>
         <file>PageWrapper.qml</file>
+        <file>ExportWrapper.qml</file>
     </qresource>
 </RCC>
